[gd_scene load_steps=5 format=3 uid="uid://dq1bhv2yjieec"]

[ext_resource type="Theme" uid="uid://d040uwcj344ty" path="res://themes/default_theme.tres" id="1_4bk3n"]
[ext_resource type="Script" path="res://UI/Menus/gameOverScript.gd" id="2_pppk0"]
[ext_resource type="PackedScene" uid="uid://qe24hk5se8x6" path="res://UI/transition.tscn" id="3_au0re"]
[ext_resource type="PackedScene" uid="uid://rt10y0ti5npa" path="res://MainMenu.tscn" id="4_ouql8"]

[node name="gameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4bk3n")
script = ExtResource("2_pppk0")
scene_menu = ExtResource("4_ouql8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00784314, 0.207843, 0.788235)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ButtonVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Retry" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitGame")
focus_neighbor_bottom = NodePath("../QuitGame")
focus_next = NodePath("../QuitGame")
focus_previous = NodePath("../QuitGame")
theme_override_font_sizes/font_size = 80
text = "Retry"

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
theme = ExtResource("1_4bk3n")
theme_override_font_sizes/font_size = 80
text = "Return To Menu"

[node name="QuitGame" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Retry")
focus_neighbor_bottom = NodePath("../Retry")
focus_next = NodePath("../Retry")
focus_previous = NodePath("../Retry")
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="Transition" parent="." instance=ExtResource("3_au0re")]
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/QuitGame" to="." method="_on_quit_game_pressed"]
